<resources>
    <string name="app_name">NIT_Chat</string>
    <string name="account_hint">账号</string>
    <string name="password_hint">密码</string>
    <string name="signin">登录</string>
    <string name="signup_link">没有账号？注册一下</string>
    <string name="forgot_password">忘记密码</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="full_name">输入您的真实姓名</string>
    <string name="confirm_password">确认密码</string>
    <string name="sign_up">注册</string>
    <string name="signin_link">已经有账号了？点击登录</string>
    <string name="reset_password">重制密码</string>
    <string name="remember_password">想起密码？点击登录</string>
    <string name="sign_title">注册</string>
    <string name="new_password">请输入新的密码</string>
    <string name="app_version">nit1107 1.0</string>
    <string name="digits">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>

</resources>
